<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenVidonn</string>
    <string name="action_settings">Settings</string>
    <string name="title_devices">Vidonn device scan</string>
    <string name="ble_not_supported">Your device does not support BLE</string>
    <string name="error_bluetooth_not_supported">Your device does not support Bluetooth</string>
    <string name="zeros">000</string>
    <string name="action_find_device">Scan devices</string>
    <string name="loading">...loading...</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday</string>
    <string name="Gender">Gender</string>
    <string name="step_goal">Number of steps</string>
    <string name="goals">Goals</string>
    <string name="myinfo">About me</string>
    <string name="search_devices">Searching for devices</string>
    <string name="battery_level">Battery Level:</string>
    <string name="last_update">Last Update:</string>
    <string name="app_descrip">This app provides access to the Vidonn X5 sports tracker. This is a 3rd party app, not affiliated to Vidonn. For more information go to the app web page.</string>
    <string name="app_credits"><![CDATA[This application was created by Diogo Gomes using several Open Source components. Please find the full credits and accompanying Licenses at http://www.diogogomes.com/projects/OpenVidonn]]></string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="error_writing_to_bracelet">Error! Could not save data to bracelet.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_alarms">Alarms</string>
    <string name="alarmDefaultDescription">OFF</string>
    <string name="descrition_off">OFF</string>
    <string name="descrition_general">General</string>
    <string name="descrition_medicine">Medicine</string>
    <string name="descrition_important">Important</string>

</resources>
