<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.diogogomes.openvidonn.app.MainActivity" >
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_alarms"
        android:title="@string/action_alarms"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_find_device"
        android:title="@string/action_find_device"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        android:showAsAction="always"
        />
</menu>
