<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diogogomes.openvidonn.app.CurrentFragment"
    android:background="@android:color/background_dark"
    >

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:minHeight="32dp"
            android:layout_width="120dp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:text="@string/battery_level"
            android:id="@+id/battery_label"
            android:gravity="center|right"
            android:capitalize="characters"
            style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse" />
        />

        <com.daimajia.numberprogressbar.NumberProgressBar
            android:id="@+id/battery_level"
            android:minHeight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/battery_label"
            custom:max="100"
            custom:progress_text_size="16sp"
            custom:progress_reached_bar_height="4dp"
            custom:progress_text_color="#ffffff"
            style="@style/NumberProgressBar_Passing_Green"
        />

        <TextView
            android:minHeight="32dp"
            android:layout_width="120dp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label"
            android:text="@string/last_update"
            android:id="@+id/current_time_label"
            android:gravity="center|right"
            android:capitalize="characters"
            style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse" />
        <TextView
            android:minHeight="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@id/battery_level"
            android:layout_toRightOf="@id/current_time_label"
            android:text="@string/loading"
            style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:id="@+id/current_time"
            android:gravity="center"
            android:capitalize="characters"
            android:maxLines="1" />

        <com.echo.holographlibrary.PieGraph
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/graph_steps"
            android:layout_below="@id/current_time_label"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="208dp"
            android:layout_height="120dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zeros"
            android:id="@+id/text_steps"
            android:layout_below="@id/current_time"
            android:layout_alignParentRight="true"
            style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
            android:gravity="center"
            android:capitalize="characters"
            android:numeric="integer"
            android:textSize="64dp"
            android:layout_margin="8dp" />

        <com.echo.holographlibrary.PieGraph
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/graph_2nd"
            android:layout_below="@id/graph_steps"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="208dp"
            android:layout_height="120dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zeros"
            android:id="@+id/text_2nd"
            android:layout_below="@id/text_steps"
            android:layout_alignParentRight="true"
            style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
            android:gravity="center"
            android:capitalize="characters"
            android:numeric="integer"
            android:textSize="64dp"
            android:layout_margin="8dp" />
        <com.echo.holographlibrary.BarGraph
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@id/graph_2nd"
            android:id="@+id/graph_history"/>


    </RelativeLayout>
</FrameLayout>
